# chip8_emu

./: .gitignore  Cargo.toml
chip8/: Cargo.toml  readme.md
chip8/src/: chip8.rs  instruction.rs  lib.rs  ram_ops.rs  stack_ops.rs  test_rom.rs  utils.rs
src/: app.rs  lib.rs  main.rs
