[package]
name = "chip8"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_closure = "0.3.2"
serde-big-array = "0.4.1"
lazy_static = "1.4.0"
rand = "*"
